Commit by Nishil Home

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nishil Shah</title>
+    <link rel="stylesheet" href="index.css">
+    <!-- <iframe src="_header.html" frameborder="0"></iframe> -->
 </head>
 <body>
+    <nav id="nav">
+        <div class="menu"></div>
+        <div class="left">Nishil's Portfolio</div>
+        <div class="right">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/contact.html">Contact Me</a></li>
+            <li><a href="/about.html">About Me</a></li>
+            <li><a href="media/Nishil_Resume.pdf" download="">Resume</a></li>
+          </ul>
+        </div>
+      </nav>
     
 </body>
 </html>
