--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left">Nishil's Portfolio</div>
         <div class="right">
           <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="/">Nishil-Home</a></li>
             <li><a href="/contact.html">Contact Me</a></li>
             <li><a href="/about.html">About Me</a></li>
             <li><a href="media/Nishil_Resume.pdf" download="">Resume</a></li>
