--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nishil Shah</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
@@ -17,27 +17,23 @@
 
       <div class="first-section">
         <div class="first-left">
-          <div class="nameP-1">NAS</div>
-          <div class="nameP-2">TIC</div>
-          <div class="nameP-3">EYE</div>
+          <div class="name-container">
+            <div class="nameP-1">NAS</div>
+            <div class="nameP-2">TIC</div>
+            <div class="nameP-3">EYE</div>
+          </div>
         </div>
 
         <div class="first-right">
-
+          <div>
+            <img class="main-image" src="media/nishilbg.png" alt="">
+          </div>
         </div>
         
       </div>
       
     </div>
   </div>
-
-  <script>
-
-    // Loading the Header part of the Website
-    $(function(){
-      $("#header").load("_header.html"); 
-    });
-  </script>
 
   </body>
 </html>
