--- a/_header.html
+++ b/_header.html
@@ -9,13 +9,15 @@
 <body>
     <nav id="nav">
         <div class="menu"></div>
-        <div class="left">Nishil's Portfolio</div>
+        <div class="left">
+          <span>Nishil's Portfolio</span>
+        </div>
         <div class="right">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/contact.html">Contact Me</a></li>
-            <li><a href="/about.html">About Me</a></li>
-            <li><a href="media/Nishil_Resume.pdf" download="">Resume</a></li>
+            <li><a class="hover-underline-animation" href="/">Home</a></li>
+            <li><a class="hover-underline-animation" href="/contact.html">Contact Me</a></li>
+            <li><a class="hover-underline-animation" href="/about.html">About Me</a></li>
+            <li><a class="hover-underline-animation" href="media/Nishil_Resume.pdf" download="">Resume</a></li>
           </ul>
         </div>
     </nav>
