--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="first-right">
           <div>
-            <img class="main-image" src="media/nishilbg.png" alt="">
+            <!-- <img class="main-image" src="media/nishilbg.png" alt=""> -->
           </div>
         </div>
         
