--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nishil Shah</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
+    <link rel = "icon" href = "media/N-Logo.JPG" type = "image/x-icon"> 
     <script src="index.js"></script>
 </head>
 <body>
@@ -25,9 +26,7 @@
         </div>
 
         <div class="first-right">
-          <div>
             <!-- <img class="main-image" src="media/nishilbg.png" alt=""> -->
-          </div>
         </div>
         
       </div>
