Commit by Office VC

--- a/_header.html
+++ b/_header.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <nav id="nav">
-        <div class="menu"></div>
-        <div class="left">
+        <!-- <div class="left">
           <span>Nishil's Portfolio</span>
-        </div>
-        <div class="right">
+        </div> -->
+        <div class="right-menu">
           <ul>
             <li><a class="hover-underline-animation" href="/">Home</a></li>
             <li><a class="hover-underline-animation" href="/contact.html">Contact Me</a></li>
