--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <link rel = "icon" href = "media/N-Logo.JPG" type = "image/x-icon"> 
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
 </head>
 <body>
   <div class="container">
@@ -19,20 +19,38 @@
       <div class="first-section">
         <div class="first-left">
           <div class="name-container">
+            <!-- <h2>NishilNishil</h2> -->
             <div class="nameP-1">NAS</div>
             <div class="nameP-2">TIC</div>
             <div class="nameP-3">EYE</div>
           </div>
         </div>
 
-        <div class="first-right">
-            <!-- <img class="main-image" src="media/nishilbg.png" alt=""> -->
-        </div>
+        <!-- <div class="first-right">
+            <img class="main-image" src="media/nishilbg.png" alt="">
+        </div> -->
         
       </div>
       
+      <div class="second-section">
+
+      </div>
     </div>
   </div>
 
+  <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+      integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
+      integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+  <script src="index.js"></script>
   </body>
 </html>
