Commit by Office VS

--- a/_header.html
+++ b/_header.html
@@ -13,9 +13,9 @@
         </div> -->
         <div class="right-menu">
           <ul>
-            <li><a class="hover-underline-animation" href="/">Home</a></li>
-            <li><a class="hover-underline-animation" href="/contact.html">Contact Me</a></li>
-            <li><a class="hover-underline-animation" href="/about.html">About Me</a></li>
+            <li><a class="hover-underline-animation" href="#home">Home</a></li>
+            <li><a class="hover-underline-animation" href="#aboutme">About Me</a></li>
+            <li><a class="hover-underline-animation" href="#contactme">Contact Me</a></li>
             <li><a class="hover-underline-animation" href="media/Nishil_Resume.pdf" download="">Resume</a></li>
           </ul>
         </div>
