Commit by Office VS

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
           <div class="aboutme-container">
             <div class="description">
               <img src="media/me.png" alt="">
+              <h3>Nishil Shah</h3>
+              <p>A Web-Degisner/Developer</p>
             </div>
             <div class="information-aboutme">
               <h2>About Me</h2>
